# alx-checker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  install.sh  requirements.txt
0x00-checker/: 0-preprocessor  Makefile
0x00-checker/tests/: 0-main.c
0x04-checker/: README.md
0x04-checker/correct_outputs/: 1-isdigit.out  10-print_triangle.out  100-prime_factor.out  101-print_number.out  4-print_most_numbers.out  5-more_numbers.out  6-print_line.out  8-print_square.out
0x04-checker/tests/: 0-main.c  1-main.c  2-main.c  3-main.c  4-main.c  _putchar.c
0x04-more_functions_nested_loops/: 0-isupper.c  1-isdigit.c  10-print_triangle.c  100-prime_factor.c  101-print_number.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  9-fizz_buzz.c  Makefile  README.md  main.h
0x04-more_functions_nested_loops/correct_outputs/: 0-isupper.out  7-print_diagonal.out  9-fizz_buzz.out
0x04-more_functions_nested_loops/tests/: 101-main.c  7-main.c  8-main.c
correct_outputs/: 2-mul.out
inc/: Checker.cpp  Checker.hpp  config.hpp.in  indicators.hpp  main.hpp  termcolor.hpp
scripts/: install.sh  install_brew.bash  install_git_latest.bash  install_github_cli.bash
src/: Animation.cpp  Animation.hpp  Checker.cpp  Checker.hpp  Installer.cpp  Installer.hpp  Print.cpp  Print.hpp  main.cpp
src/animation/: Animation.cpp  Animation.hpp
src/checker/: Checker.cpp  Checker.hpp  checkerUtils.cpp  diff.cpp  initMaps.cpp
src/installer/: Installer.cpp  Installer.hpp  dependencies.cpp  installMethods.cpp  installerUtils.cpp
src/printer/: Printer.cpp  Printer.hpp
tests/: 10-main.c  5-main.c  6-main.c
